[SYNCOPE-704] syncope-ext-swagger-ui provided; CXF's Swagger2Feature and Swagger's SwaggerSerializer extended